# bat-detector-msds

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  run_batdetect_model.py  wav_analysis.ipynb
app/: call_segmenter.py  cfg.py  cli.py  conflg.py  model.py  prepare_audio_files.py  run_batdetect_model.py  training_pipeline.py 
cli/: cli.py
daily_notebooks/: 20240327__trying_jitter_on_one_file.ipynb  20240401__trying_to_dissect_pipeline.ipynb  20240401__trying_to_run_pipeline_on_resampled.ipynb  20240403__trying_jitter_on_one_file.ipynb  20240804__making_animated_map_time_series.ipynb  20240808__making_animated_map_time_series.ipynb  20240813__adding_kmeansclassification_to_detector.ipynb  20240813__trying_to_resample_on_file.ipynb  20240814__checking_file_size_and_battery_capacity.ipynb  20240815__converting_nabat_to_ravenpro_or_plotting.ipynb  20240815__sweeping_detection_threshold_for_bd2.ipynb  20240828__converting_nabat_to_ravenpro_or_plotting.ipynb  20240828__making_animated_map_time_series.ipynb  20240828__making_animated_map_time_series_singlenight.ipynb  20240831__adding_kmeansclassification_to_detector.ipynb  20240831__trying_to_resample_on_file.ipynb  20240901__plot_micromoth_file.ipynb  20240906__plot_array_audiomoth_file_inlab.ipynb  20240906__plot_array_mic_file_inlab.ipynb  20240906__plot_array_micromoth_file_inlab.ipynb  20240910__phil_script_plot_from_bytes.ipynb
field_records/: ubna_2021.csv  ubna_2022a.csv  ubna_2022b.csv  ubna_2023.csv  ubna_2024.csv
misc/: utils.py
notebooks/: ubna_2022b.csv  (+11 more)
(+2288 files in other folders)
