[tool.poetry]
name = "bat-detector-msds"
version = "0.1.0"
description = "Find the bat signals in the noise"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bat_detector_msds"}]

[tool.poetry.dependencies]
python = "3.9.*"
tqdm = "^4.64.1"
azure-storage-blob = "^12.14.1"
torchaudio = "^0.13.1"
matplotlib = "^3.6.3"
scipy = "^1.10.0"
numpy = "^1.24.1"
pandas = "^1.5.3"
llvmlite = "^0.39.1"
mlflow = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
